--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,15 @@ coverage
 
 # Bower dependency directory (https://bower.io/)
 bower_components
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # node-waf configuration
 .lock-wscript
@@ -128,3 +137,5 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+test-results/
+playwright-report/
