--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,12 +60,19 @@ jobs:
         with:
           repository: 'aspitek/manifests'
           token: ${{ secrets.PAT_TOKEN }}
-      
+          
+      - name: Checkout le repo du code
+        uses: actions/checkout@v4
+        with:
+          repository: 'aspitek/solfa-front'
+          token: ${{ secrets.PAT_TOKEN }}
+          path: solfa-front-code
+  
+        # Copier le ConfigMap
       - name: Copier le ConfigMap depuis le repo du code
         run: |
-          # Télécharger le fichier ConfigMap depuis le repo du code
-          curl -o solfa-back/configmap.yaml https://raw.githubusercontent.com/aspitek/solfa-back/main/k8s/configmap.yaml
-
+          mkdir -p solfa-front/
+          cp solfa-front-code/k8s/configMap.yml solfa-front/configMap.yml  
       # Modify the image in manifest.yml
       - name: Modify the image in manifest.yml
         run: |
@@ -82,7 +89,8 @@ jobs:
 
           # Stage and commit changes
           git add solfa-front/manifest.yml
-          git commit -m 'Updated image to ${{ secrets.DOCKER_USERNAME }}/solfa:dev-${{ github.sha }} by GitHub Actions: Job changemanifest: ${{ github.run_number }}'
+          git add solfa-front/configMap.yml
+          git commit -am 'Updated image to ${{ secrets.DOCKER_USERNAME }}/solfa:dev-${{ github.sha }} by GitHub Actions: Job changemanifest: ${{ github.run_number }}'
 
           git push origin main
         env:
