--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
-name: solfa-front-ci-dev
+name: solfa-front-develop-ci-dev
 
 on:
   # Triggers the workflow on push or pull request events for branches starting with "main"
   push:
-    branches: [ "dev-*" ]
+    branches: [ "develop" ]
 
   # Allows manual execution of the workflow from the Actions tab
   workflow_dispatch:
@@ -42,12 +42,12 @@ jobs:
       # Build the Docker image
       - name: Build Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/solfa:dev-${{ github.sha }} .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/solfa-front-develop:dev-${{ github.sha }} .
 
       # Push the Docker image to Docker Hub
       - name: Push Docker image
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/solfa:dev-${{ github.sha }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/solfa-front-develop:dev-${{ github.sha }}
 
   modifygit:
     needs: build
@@ -64,15 +64,15 @@ jobs:
       - name: Checkout le repo du code
         uses: actions/checkout@v4
         with:
-          repository: 'aspitek/solfa-front'
+          repository: 'aspitek/solfa-front-develop'
           token: ${{ secrets.PAT_TOKEN }}
-          path: solfa-front-code
+          path: solfa-front-develop-code
   
         # Copier le ConfigMap
       - name: Copier le ConfigMap depuis le repo du code
         run: |
-          mkdir -p solfa-front/
-          cp solfa-front-code/k8s/configMap.yml solfa-front/configMap.yml  
+          mkdir -p solfa-front-develop/
+          cp solfa-front-develop-code/k8s/configMap.yml solfa-front-develop/configMap.yml  
       # Modify the image in manifest.yml
       - name: Modify the image in manifest.yml
         run: |
@@ -85,12 +85,12 @@ jobs:
           pwd
 
           # Update the image reference in manifest.yml
-          sed -i "s+image: .*$+image: ${{ secrets.DOCKER_USERNAME }}/solfa:dev-${{ github.sha }}+g" solfa-front/manifest.yml
+          sed -i "s+image: .*$+image: ${{ secrets.DOCKER_USERNAME }}/solfa-front-develop:dev-${{ github.sha }}+g" solfa-front-develop/manifest.yml
 
           # Stage and commit changes
-          git add solfa-front/manifest.yml
-          git add solfa-front/configMap.yml
-          git commit -am 'Updated image to ${{ secrets.DOCKER_USERNAME }}/solfa:dev-${{ github.sha }} by GitHub Actions: Job changemanifest: ${{ github.run_number }}'
+          git add solfa-front-develop/manifest.yml
+          git add solfa-front-develop/configMap.yml
+          git commit -am 'Updated image to ${{ secrets.DOCKER_USERNAME }}/solfa-front-develop:dev-${{ github.sha }} by GitHub Actions: Job changemanifest: ${{ github.run_number }}'
 
           git push origin main
         env:
